--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header id="header">
                              <!-- logo  containe -->
         <div class="logo">
-            <img src="./img/Specs mart.png" alt="">
+            <a href="./index.html"><img  src="./img/Specs mart.png" alt=""></a>       
         </div>
                          
                              <!-- Search bar -->
@@ -59,18 +59,18 @@
                              <!-- Login&Cart Pages -->
         <div class="signpage">
             <a href="#">Track Order</a>
-            <a href="#">Sign In & Sign UP</a>
+            <a href="./signup.html" class="formLogin">Sign In & Sign UP</a>
             <a href="#">Wishlist</a>
-            <a href="#">Cart</a>
+            <a href="./cart.html">Cart</a>
         </div>
     </header>
                             <!-- Navigation Part -->
-    <header id="navbar">
+    <div id="navbar">
      <div id="navpages">
       
-       <a href="#">
+       <a href="./product.html">
         EYEGLASSES
-         <div class="subMenu">
+         <!-- <div class="subMenu">
         <div class="mainMenu">
            <img src=" https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
             <h5>Men</h5>
@@ -88,7 +88,7 @@
         </div>
         <div></div>
         <div></div>
-         </div>
+         </div> -->
        </a>
    
        <a href="#">COMPUTER GLASSES</a>
@@ -108,7 +108,7 @@
        <img src="./img/Screenshot (61).png" alt="">
        <img src="./img/Screenshot (62).png" alt="">
      </div>
-    </header>
+    </div>
 
     <div class="lensimg">
         <div class="subLens">
@@ -136,5 +136,184 @@
             <h2>Progressive Lenses</h2>
         </div>
     </div>
+    <div class="slide">
+                   <!------- Append slide images-------->
+    </div>
+    <div class="member">
+        <img src="https://static1.lenskart.com/media/desktop/img/Feb23/23feb/PREMIUM%20BRANDS%20WEB.jpg" alt="">
+        <img src="https://static1.lenskart.com/media/desktop/img/Apr22/Bannerforexport.jpg" alt="">
+    </div>
+    <div class="slideimg">
+        <!------- Append slide images-------->
+</div>
+<div class="member">
+    <h1>As Seen on Shark Tank</h1>
+    <img src="https://static1.lenskart.com/media/desktop/img/Dec22/1-Dec/Homepage-Banner-web.gif" alt="">
+</div>
+<div class="member">
+    <h1>As Seen On Karan Johar</h1>
+    <img src="https://static1.lenskart.com/media/desktop/img/Dec22/Web_banner.gif" alt="">
+</div>
+<div class="member">
+    <h1>Trending Sunglasses</h1>
+    <img src="https://static1.lenskart.com/media/desktop/img/Jan23/sunglasses/Sun-Banner-web.gif" alt="">
+</div>
+<div class="member">
+    <h1>OJOS</h1>
+    <img src="https://static1.lenskart.com/media/desktop/img/Feb23/23feb/ojos%20banner/ojos%20banner/web%20banner/ojos-web-1199.gif" alt="">
+</div>
+<div class="member">
+    <h1>Aquacolor - Glam Up With Color Lenses</h1>
+    <img src="https://static1.lenskart.com/media/desktop/img/Oct22/kiara/Refresh-Banner-Web.gif" alt="">
+</div>
+<h1>FIND THE PERFECT FIT</h1>
+<div class="fiting">
+    <div>
+        <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/eye-square10.jpg" alt="">
+    </div>
+    <div>
+        <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/sun-square.jpg" alt="">
+        <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/ce-square.jpg" alt="">
+    </div>
+    <div>
+        <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/power-sun-square.jpg" alt="">
+    </div>
+    <div>
+        <img src="https://static1.lenskart.com/media/desktop/img/Nov20/25-Nov/Banner03_TileDesktop.jpg" alt="">
+    </div>
+</div>
+<h1>INTRODUCING OJOS Wear - SUBSCRIBE & SAVE</h1>
+<div class="save">
+    <img src="https://static1.lenskart.com/media/desktop/img/May22/ojos-web.jpg" alt="">
+</div>
+<h1>CONTACT LENSES & MORE</h1>
+<div class="morelens">
+    <img src="https://static1.lenskart.com/media/desktop/img/June22/contact-lens-more.jpg" alt="">
+    <img src="https://static1.lenskart.com/media/desktop/img/June22/contact-lens-more-1.jpg" alt="">
+</div>
+<h1>BUY IT YOUR WAY</h1>
+<div class="buy">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/call1800.jpg" alt="">
+    <img src="https://static1.lenskart.com/media/desktop/img/Nov21/whatsapp.jpg" alt="">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/hto.jpg" alt="">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/stores.jpg" alt="">
+</div>
+<h1>OUR BRANDS</h1>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/Desktop/VC-Banner.jpg" alt="">
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/Nov22/Updated%20brand%20banner%20jj%20.jpg" alt="">
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/25-Aug/LK-AIR-Banner.jpg" alt="">
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/25-Aug/LK-Readers-Banner.jpg" alt="">
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/Nov20/25-Nov/Banner05_Final2ndDec21.jpg" alt="">
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/June22/Our-Brands-Banner.jpg" alt="">
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="slideimg">
+    <!------- Append slide images-------->
+</div>
+<div class="member">
+    <img src="https://static1.lenskart.com/media/desktop/img/Aug21/25-Aug/whatsapp.png" alt="">
+</div>
+<div class="custmor">
+    <h1>MEET OUR HAPPY CUSTOMERS</h1>
+    <div>
+    <a href="https://youtu.be/HYPqf_eVvvM"><img src="./img/Screenshot (66).png" alt=""></a>
+    <a href="https://youtu.be/SQm3RxXRunw"><img src="./img/Screenshot (67).png" alt=""></a>
+    <a href="https://youtu.be/IZpUQ-S_LcM"><img src="./img/Screenshot (68).png" alt=""></a>
+</div>
+</div>
+<div class="followus">
+    <h1>Buy The Best Eyewear From Lenskart</h1>
+    <p>Lenskart Is The Leading E-Commerce Portal For Eyewear In India. It Has Revolutionised The Eyewear Industry In The Country With Its Omni-Channel Approach. From An Ever-Growing Number Of Offline Stores Across Major Cities In The Country To Innovative Integration Of Technology While Purchasing Online, Lenskart Caters To Every Customer With Several Deals And Offers.</p>
+    <p>A One-Stop Online Solution For Purchasing Eyewear And Its Accessories, Lenskart Delivers Them Right At Your Doorstep With Convenient Methods Of Payment. Sunglasses As Well As Eyeglasses Are Available For Men And Women In A Diverse Array Of Styles And Trendy Colours. If You Want To Try Out Contact Lenses, Pick The Ones Of Your Choice From The Extensive Variety Of Coloured Contact Lenses From Our Online Store.</p>
+    <div class="glasses">
+        <div>
+            <h3>SUNGLASSES</h3>
+           <button>+</button>
+        </div>
+        <div>
+            <h3>SUNGLASSES</h3>
+           <button>+</button>
+        </div>
+        <div>
+            <h3>SUNGLASSES</h3>
+           <button>+</button>
+        </div>
+    </div>
+    <div class="app">
+        <div class="service">
+            <div>
+                <h1>Services</h1>
+                <p>Store Locator</p>
+                <p>Enter My Power</p>
+                <p>Buying Guide</p>
+                <p>Frame Size</p>
+            </div>
+            <div>
+                <h1>About Us</h1>
+                <p>We Are Hiring</p>
+                <p>Refer & Earn</p>
+                <p>About Us</p>
+                <p>Lenskart Coupons</p>
+            </div>
+            <div>
+                <h1>Help</h1>
+                <p>FAQ's</p>
+            </div>
+        </div>
+        <div class="download">
+            <div>
+                <img src="https://static.lenskart.com/media/desktop/img/play-store.svg" alt="">
+                <img src="https://static.lenskart.com/media/desktop/img/app-store.svg" alt="">
+            </div>
+            <p>Download Lenskart App to buy
+                Eyeglasses, Sunglasses and Contact Lenses</p>
+        </div>
+    </div>
+    <div class="web">
+     <div>
+        <p>T & C</p>
+        <p>Privacy</p>
+        <p>Disclaimer</p>
+     </div>
+    </div>
+</div>
 </body>
+<script src="./Script/index.js"></script>
 </html>
