--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@
    padding-left: 20px;
    margin-bottom: 0px;
 }
-.btn-feild > input{
+.btn-feild > button{
     margin-bottom: 10px;
     width: 400px;
     height: 40px;
@@ -75,7 +75,7 @@
     background-color:  rgb(167, 163, 163);
     color: #24155f;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 .create-feild{
     display: flex;
@@ -103,11 +103,12 @@
          <form action="#" class="formfeild">
             <div class="feildInp">
                 <p>Sign In</p>
-                <input type="email" class="inpLogin" placeholder="Mobile/Email">
+                <input type="email number" class="inpLogin" placeholder="Mobile/Email">
             </div>
             <p>Get update on Whatsapp</p>
             <div class="btn-feild">
-            <input type="submit" value="Sign In">
+            <!-- <input type="submit" value="Sign In"> -->
+            <button type="button" onclick="SignIn()">Sign In</button>
         </div>
          </form>
 
@@ -120,28 +121,27 @@
     </div>
 </body>
 <script>
-    let form = document.querySelector(".formfeild")
-    let inpEmailMob = document.querySelector(".inpLogin")
-    let signInlist = JSON.parse(localStorage.getItem("signIn-list"))||[];
+   
 
-    form.addEventListener("submit", addData);
+ function SignIn(){
 
-   function addData(e){
-    e.preventDefault();
-    signInlist.forEach(element => {
-        if(inpEmailMob.value === ""){
-            alert("Please enter email/mobile")
-        }
-        else {
-           signInlist = signInlist.filter(element => {
-            return inpEmailMob.value == element.email
-           })
+let inpEmailMob = document.querySelector(".inpLogin").value;
 
-            localStorage.setItem("signIn-list", JSON.stringify(signInlist));
-            addData() 
-            alert("Signed In Successful")
-        }
-    });
-   }
+ let email = localStorage.getItem("email");
+ let mobile = localStorage.getItem("mobile");
+
+    if(inpEmailMob === email || inpEmailMob === mobile){
+
+        window.location.href = "cart.html"
+
+        alert("Signed In Successful")
+       
+    }
+    else {
+        alert("Please enter incorrect email/mobile")
+        
+    }
+}
+
 </script>
 </html>
