--- a/compglasses.html
+++ b/compglasses.html
@@ -819,7 +819,7 @@ filterdata.addEventListener("change", () => {
      add_to_cart.textContent = "Add to cart";
 
      let wishlist = document.createElement("button")
-     wishlist.textContent = "Wishlist";
+     wishlist.textContent = "Wishlist"
        
      add_to_cart.addEventListener("click", () => {
         productData.push(element)
